<resources>
    <string name="app_name">Flowing Goblet</string>
    <string name="hello">Abies did not finished it </string>

    <string name="welcome_words">Welcome To Flowing Goblet</string>
    <string name="enter_nickname">Enter Nickname</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Conform Password</string>
    <string name="register_button">Sign Up</string>
    <string name="title_activity_usage2">Usage2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="web_client_id">1:460668511645:android:e92f5c5801288a9d233b74</string>
    <string name="oauth_client_id">460668511645-g64nsudmsdt3mlq3iieapo00p1t57q1h.apps.googleusercontent.com</string>


</resources>