<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/usage"

    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="267dp"
        android:layout_height="44dp"

        android:layout_marginStart="75dp"
        android:layout_marginTop="76dp"
        android:text="@string/welcome_words"
        android:textColor="@color/Lightprimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/etNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="152dp"
            android:background="@color/spTextBackCol"
            android:hint="@string/enter_nickname"
            android:maxLines="1"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/spTextBackCol"
            android:hint="@string/enter_email"
            android:maxLines="1"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/spTextBackCol"
            android:hint="@string/enter_password"
            android:maxLines="1"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/confPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/spTextBackCol"
            android:hint="@string/confirm_password"
            android:maxLines="1"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/register_button"
            android:textSize="20sp"/>

    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>